log
Thu 28 Mar 2024 02:40:46 PM UTC: 
 tests:  0|6
total_score: 0/70
160aa49
Thu 28 Mar 2024 02:53:54 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
3370ba9
Thu 28 Mar 2024 02:58:30 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
bc9129c
Thu 28 Mar 2024 03:05:29 PM UTC: 
 list.c | 17 +++++++++++------
 1 file changed, 11 insertions(+), 6 deletions(-)
 tests:  0|6
total_score: 0/70
56d19ee
Thu 28 Mar 2024 03:15:34 PM UTC: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:65:9: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   65 |     list->prev = newNode;
      |         ^~
Compilation failed
8330390
